hero section complete for desktop mood

--- a/index.html
+++ b/index.html
@@ -6,19 +6,33 @@
     <title>Document</title>
 
     <!-- font family link  -->
+     <!-- noto serif -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Noto+Serif:ital,wght@0,100..900;1,100..900&family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100..900;1,100..900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <!-- inter  -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Noto+Serif:ital,wght@0,100..900;1,100..900&family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100..900;1,100..900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
+    <!-- icon cdn -->
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css" integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+     <!-- css link  -->
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <!-- header section  -->
      <header class="main-header">
-        <div class="container">
-            <nav class="nav-bar">
+        <div class="container header-content inter-font">
+            <nav class="nav-bar display-flex">
                 <div class="logo-section">
                     <img src="./assets/logo.png" alt="">
                 </div>
                 <div class="nav-items-section">
-                    <ul>
+                    <ul class="display-flex">
                         <li class="nav-item">
-                            <a href="" class="nav-links">Home</a>
+                            <a href="" class="nav-links" id="home-active">Home</a>
                         </li>
                         <li class="nav-item">
                             <a href="" class="nav-links">Shop</a>
@@ -26,13 +40,57 @@
                         <li class="nav-item">
                             <a href="" class="nav-links">About us</a>
                         </li>
-                        <div class="cart">
-                            
+                        <div class="cart display-flex">
+                            <div class="main-cart-icon">
+                                <i class="fa-solid fa-cart-shopping"></i>
+                            </div>
+                            <p>Cart<span>($56)</span></p>
                         </div>
                     </ul>
                 </div>
             </nav>
         </div>
      </header>
+
+     <!-- main content section  -->
+      <main class="main-section">
+        <!-- hero section  -->
+         <section class="hero-section">
+            <div class="container hero-content display-flex">
+                <div class="left-hero-section">
+                    <h1 class="noto-serif-font">ALWAYS <span class="fresh-flowers">FRESH <br>
+                            FLOWERS</span></h1>
+                    <p class="hero-description common-fonts-paragraph">
+                        Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh flowers that are perfect for any occasion. 
+                    </p>
+                </div>
+                <div class="right-hero-img">
+                    <img src="./assets/hero-flower.png" alt="">
+                </div>
+            </div>
+         </section>
+
+         <!-- plant section  -->
+          <section class="plant-section">
+            <div class="container plants-content">
+                <div class="plants-header-section display-flex">
+                    <h2 class="fresh-flowers-plants-title">Our Plants</h2>
+                    <p class="common-fonts-paragraph plants-description">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</p>
+                </div>
+                <div class="card-container">
+                    <div class="card">
+                        <div class="card-img">
+                            <img src="./assets/sample-flower-image.png" alt="sample-flower-image">
+                        </div>
+                        <div class="card-content">
+                            <p>Lily Blossom</p>
+                            <h5>20 USD</h5>
+                            <button class="btn inter-font">ADD TO CART</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+          </section>
+      </main>
 </body>
 </html>
