complete plant section desktop mood

--- a/index.html
+++ b/index.html
@@ -72,19 +72,105 @@
 
          <!-- plant section  -->
           <section class="plant-section">
-            <div class="container plants-content">
+            <div class="container plants-content display-flex">
                 <div class="plants-header-section display-flex">
-                    <h2 class="fresh-flowers-plants-title">Our Plants</h2>
+                    <h2 class="fresh-flowers-plants-title"><span class="fresh-flowers-plants">Our</span> Plants</h2>
                     <p class="common-fonts-paragraph plants-description">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</p>
                 </div>
-                <div class="card-container">
+                <div class="card-container inter-font">
                     <div class="card">
                         <div class="card-img">
                             <img src="./assets/sample-flower-image.png" alt="sample-flower-image">
                         </div>
                         <div class="card-content">
-                            <p>Lily Blossom</p>
-                            <h5>20 USD</h5>
+                            <div class="flower-name-price">
+                                <p>Lily Blossom</p>
+                                <strong class="lily-blossom">20 USD</strong>
+                            </div>
+                            <button class="btn inter-font">ADD TO CART</button>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-img">
+                            <img src="./assets/sample-flower-image.png" alt="sample-flower-image">
+                        </div>
+                        <div class="card-content">
+                            <div class="flower-name-price">
+                                <p>Lily Blossom</p>
+                                <strong class="lily-blossom">20 USD</strong>
+                            </div>
+                            <button class="btn inter-font">ADD TO CART</button>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-img">
+                            <img src="./assets/sample-flower-image.png" alt="sample-flower-image">
+                        </div>
+                        <div class="card-content">
+                            <div class="flower-name-price">
+                                <p>Lily Blossom</p>
+                                <strong class="lily-blossom">20 USD</strong>
+                            </div>
+                            <button class="btn inter-font">ADD TO CART</button>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-img">
+                            <img src="./assets/sample-flower-image.png" alt="sample-flower-image">
+                        </div>
+                        <div class="card-content">
+                            <div class="flower-name-price">
+                                <p>Lily Blossom</p>
+                                <strong class="lily-blossom">20 USD</strong>
+                            </div>
+                            <button class="btn inter-font">ADD TO CART</button>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-img">
+                            <img src="./assets/sample-flower-image.png" alt="sample-flower-image">
+                        </div>
+                        <div class="card-content">
+                            <div class="flower-name-price">
+                                <p>Lily Blossom</p>
+                                <strong class="lily-blossom">20 USD</strong>
+                            </div>
+                            <button class="btn inter-font">ADD TO CART</button>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-img">
+                            <img src="./assets/sample-flower-image.png" alt="sample-flower-image">
+                        </div>
+                        <div class="card-content">
+                            <div class="flower-name-price">
+                                <p>Lily Blossom</p>
+                                <strong class="lily-blossom">20 USD</strong>
+                            </div>
+                            <button class="btn inter-font">ADD TO CART</button>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-img">
+                            <img src="./assets/sample-flower-image.png" alt="sample-flower-image">
+                        </div>
+                        <div class="card-content">
+                            <div class="flower-name-price">
+                                <p>Lily Blossom</p>
+                                <strong class="lily-blossom">20 USD</strong>
+                            </div>
+                            <button class="btn inter-font">ADD TO CART</button>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-img">
+                            <img src="./assets/sample-flower-image.png" alt="sample-flower-image">
+                        </div>
+                        <div class="card-content">
+                            <div class="flower-name-price">
+                                <p>Lily Blossom</p>
+                                <strong class="lily-blossom">20 USD</strong>
+                            </div>
                             <button class="btn inter-font">ADD TO CART</button>
                         </div>
                     </div>
