badge and challange section complete

--- a/index.html
+++ b/index.html
@@ -177,6 +177,72 @@
                 </div>
             </div>
           </section>
+
+          <!-- badge section  -->
+          <section class="badge-section">
+            <div class="badge-content display-flex container">
+                <div class="badge-img-section">
+                    <div class="flower-store">
+                        <img src="./assets/flower-store.png" alt="flower-store">
+                    </div>
+                    <div class="badge">
+                        <img src="./assets/trusted-badge.png" alt="trusted-badge">
+                    </div>
+                </div>
+                <div class="flower-lover-content">
+                    <h2 class="fresh-flowers-plants-title">Flower & Plants Lover</h2>
+                    <ul class="common-fonts-paragraph display-flex">
+                        <li>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
+                        <li>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
+                        <li>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
+                    </ul>
+                </div>
+            </div>
+          </section>
+
+          <!-- Latest  Deals -->
+           <section class="latest-deals">
+             <div class="latest-deals-content">
+                <h2 class="fresh-flowers-plants-title"> <span class="fresh-flowers-plants">Latest</span> Deals</h2>
+                <p class="common-fonts-paragraph">Indulge your senses with the beauty and fragrance of our fresh flower shop. From <br> classic roses to exotic blooms, we offer a wide variety of fresh.</p>
+             </div>
+           </section>
+
+           <!-- discount section  -->
+            <section class="discount-section">
+                <div class="discount-content container noto-serif-font">
+                    <div class="grid-item grid-item-1">
+                        <div class="content">
+                            <p class="discount">60% OFF | Bloom Plant</p>
+                            <div class="cta inter-font"><a href="#">Shop Now</a></div>
+                        </div>
+                    </div>
+                    <div class="grid-item grid-item-2">
+                        <div class="content">
+                            <p class="discount">25% Off | Zabo Plant</p>
+                            <div class="cta inter-font"><a href="#">Shop Now</a></div>
+                        </div>
+                    </div>
+
+                    <div class="grid-item grid-item-3">
+                        <div class="content">
+                            <p class="discount">30% Off | Ana Plant</p>
+                            <div class="cta inter-font"><a href="#">Shop Now</a></div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <!-- bunch section  -->
+             <section class="bunch-section">
+                <div class="bunch-content display-flex">
+                   <h2 class="fresh-flowers-plants-title"> Join the colorful Bunch</h2>
+                   <form class="input-field">
+                      <input type="email" name="email" id="email" placeholder="Write Email">
+                      <button class="btn">Subscribe</button>
+                   </form>
+                </div>
+             </section>
       </main>
 </body>
 </html>
