--- a/index.html
+++ b/index.html
@@ -243,6 +243,71 @@
                    </form>
                 </div>
              </section>
+
+
+             <!-- footer section  -->
+              <footer>
+                <div class="footer-content display-flex container">
+                    <div class="footer-logo">
+                        <div class="img">
+                            <img src="./assets/logo.png" alt="logo">
+                        </div>
+                        <p class="common-fonts-paragraph include">Indulge your senses with the  beauty and fragrance of our fresh flower shop. </p>
+                    </div>
+                    <div class="page-link">
+                        <ul class="display-flex">
+                            <li class="footer-link-item">
+                                <a href="#" class="link">Home</a>
+                            </li>
+                            <li class="footer-link-item">
+                                <a href="#" class="link">About Us</a>
+                            </li>
+                            <li class="footer-link-item">
+                                <a href="#" class="link">Blog</a>
+                            </li>
+                            <li class="footer-link-item">
+                                <a href="#" class="link">FAQ</a>
+                            </li>
+                            <li class="footer-link-item">
+                                <a href="#" class="link">Contact Us</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="privacy-policy">
+                        <ul class="display-flex">
+                            <li>
+                                <a href="#">Features</a>
+                            </li>
+                            <li>
+                                <a href="#">Pricing</a>
+                            </li>
+                            <li>
+                                <a href="#">Privacy Policy</a>
+                            </li>
+                            <li>
+                                <a href="#">Terms of Service</a>
+                            </li>
+                            <li>
+                                <a href="#">Help Center</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="social-media display-flex">
+                        <a href="#">
+                            <img src="./assets/icon-linkedin.png" alt="icon-linkedin">
+                        </a>
+                        <a href="#">
+                            <img src="./assets/icon-twitter.png" alt="icon-twitter">
+                        </a>
+                        <a href="#">
+                            <img src="./assets/icon-facebook.png" alt="icon-facebook">
+                        </a>
+                        <a href="#">
+                            <img src="./assets/icon-youtube.png" alt="icon-youtube">
+                        </a>
+                    </div>
+                </div>
+              </footer>
       </main>
 </body>
 </html>
