complete mobile responsive

--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
                         </div>
                         <p class="common-fonts-paragraph include">Indulge your senses with the  beauty and fragrance of our fresh flower shop. </p>
                     </div>
-                    <div class="page-link">
+                    <div class="page-link inter-font">
                         <ul class="display-flex">
                             <li class="footer-link-item">
                                 <a href="#" class="link">Home</a>
@@ -274,7 +274,7 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="privacy-policy">
+                    <div class="privacy-policy inter-font">
                         <ul class="display-flex">
                             <li>
                                 <a href="#">Features</a>
