fixed some width issue

--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
               <footer>
                 <div class="footer-content display-flex container">
                     <div class="footer-logo">
-                        <div class="img">
+                        <div class="img-footer">
                             <img src="./assets/logo.png" alt="logo">
                         </div>
                         <p class="common-fonts-paragraph include">Indulge your senses with the  beauty and fragrance of our fresh flower shop. </p>
