change overlay color

--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                    <h2 class="fresh-flowers-plants-title"> Join the colorful Bunch</h2>
                    <form class="input-field">
                       <input type="email" name="email" id="email" placeholder="Write Email">
-                      <button class="btn">Subscribe</button>
+                      <button class="btn inter-font">Subscribe</button>
                    </form>
                 </div>
              </section>
