complete mobile responsive for 576px

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                         <img src="./assets/flower-store.png" alt="flower-store">
                     </div>
                     <div class="badge">
-                        <img class="spinner" src="./assets/trusted-badge.png" alt="trusted-badge">
+                        <img class="spinner" src="./assets/badge.png" alt="trusted-badge">
                     </div>
                 </div>
                 <div class="flower-lover-content">
